horizontal scroll fix for ios 10012024

--- a/client/src/styles/animation.css
+++ b/client/src/styles/animation.css
@@ -1,7 +1,8 @@
-body{
+body, html {
     overflow-x: hidden;
+    margin: 0; /* Ensure no default margin */
+    padding: 0; /* Ensure no default padding */
 }
-
 
 .hide-left {
     opacity: 0;
